@@ -1,64 +1,43 @@
 package PriceList;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 public class Price {
-    String rubles;
-    String pennies;
+    Integer ruble;
+    Integer kopek = 0;
 
     public Price(String price) {
-        ArrayList<String> array = new ArrayList<>(
-                Arrays.asList(price.split("[.,]")));
-        if (array.size() == 1) {
-            array.add("0");
-        }
-        this.rubles = array.get(0);
-        this.pennies = array.get(1);
-        if (this.pennies.length() == 1) {
-            this.pennies = this.pennies + "0";
+        List<String> array = List.of(price.split("[.,]"));
+        this.ruble = Integer.parseInt(array.get(0));
+        if (array.size() == 2) {
+            this.kopek = Integer.parseInt(array.get(1));
         }
     }
 
 
-    public String asPennies() {
+    public Integer asKopek() {
         String str = "";
-        str = str + this.rubles;
-        str = str + this.pennies;
-        return str;
-    }
-
-    public String asRubles() {
-        String str = "";
-        str = str + this.rubles;
-        str = str + ".";
-        str = str + this.pennies;
-        return str;
-    }
-
-    public Price change(String price) {
-        ArrayList<String> array = new ArrayList<>(
-                Arrays.asList(price.split("[.,]")));
-        if (array.size() == 1) {
-            array.add("0");
-        }
-        this.rubles = array.get(0);
-        this.pennies = array.get(1);
-        if (this.pennies.length() == 1) {
-            this.pennies = this.pennies + "0";
-        }
-        return this;
+        str = str + this.ruble;
+        if (this.kopek < 10) str += "0";
+        str = str + this.kopek;
+        return Integer.parseInt(str);
     }
 
     @Override
     public String toString() {
-        return this.rubles + "." + this.pennies;
+        String str = "";
+        str += this.ruble;
+        str += ".";
+        if (this.kopek < 10) str += "0";
+        str += this.kopek;
+        str += " руб.";
+        return str;
     }
 
     @Override
     public int hashCode() {
-        return this.rubles.hashCode() * 29 + this.pennies.hashCode();
+        return this.ruble * 29 + this.kopek;
     }
 
     @Override
@@ -70,6 +49,6 @@ public class Price {
         if (this.getClass() != o.getClass())
             return false;
         Price price = (Price) o;
-        return Objects.equals(price.rubles, this.rubles) && Objects.equals(price.pennies, this.pennies);
+        return Objects.equals(price.ruble, this.ruble) && Objects.equals(price.kopek, this.kopek);
     }
 }
